--- a/Labs/Probability/Probability.Rmd
+++ b/Labs/Probability/Probability.Rmd
@@ -1,12 +1,12 @@
 <style>
 
 /* uncomment out this to generate exercise */
- .hider {display: none;} 
- .hider2 {display: inline;} 
+/* .hider {display: none;}  */
+/* .hider2 {display: inline;} */
 
 /* uncomment out this to generate key */
-/* .hider {display: inline;} */
-/* .hider2 {display: none;} */
+ .hider {display: inline;} 
+ .hider2 {display: none;} 
 
 </style>
 
@@ -44,10 +44,10 @@ library(knitr)
 knitr::opts_chunk$set(cache = FALSE, warnings = FALSE, tidy = FALSE)
 
 # uncomment out this to generate key
-# nokey = FALSE; key = TRUE
+ nokey = FALSE; key = TRUE
 
 # uncomment out this to generate exercise
- nokey = TRUE; key = FALSE
+# nokey = TRUE; key = FALSE
 ```
 
 <br>
@@ -139,10 +139,12 @@ because $\Pr\big(z_2\mid z_3\big) = \Pr\big(z_2\big)$ if $z_2$ and $z_3$ are ind
 
 #### V. Interpreting and factoring
 
-The probability of an observation $y$ depends on a true ecological state of interest, $z$, and the parameter in a data model, $\theta_d$. The probability of the true state $z$ depends on the parameter in an ecological process model, $\pmb\theta_p$. We know that $\theta_d$ and $\theta_p$ are independent.  Write out a factored expression for the joint distribution, $\Pr\big(y,z,\theta_d,\theta_p\big)$. Drawing a Bayesian network will help.
+The probability of a vector of observations $\mathbf{y}$ depends on a vector of true ecological states of interest, $\mathbf{z}$, and the parameters in a data model: $\boldsymbol{\theta}_{d}$ and $\sigma_{d}$. The probability of the true states $\mathbf{z}$ depends on the parameters in an ecological process model: $\boldsymbol{\theta}_{p}$ and $\sigma_{p}$. We know that $\boldsymbol{\theta}_{d}$, $\boldsymbol{\theta}_{p}$, $\sigma_{p}$, and $\sigma_{d}$ are all independent.  Write out a factored expression for the joint distribution, $\Pr\big(\mathbf{y},\mathbf{z},\boldsymbol{\theta}_{d},\boldsymbol{\theta}_{p}, \sigma_{p}, \sigma_{d}\big)$. Drawing a Bayesian network will help.
 
 <div class="hider">
-$$\Pr\big(y,z,\theta_d,\theta_p\big) = \Pr\big(y \mid z,\theta_d\big)\Pr\big(z \mid \theta_p\big)\Pr\big(\theta_d\big)\Pr\big(\theta_p\big)$$
+$$\Pr\big(\mathbf{y},\mathbf{z},\boldsymbol{\theta}_{d},\boldsymbol{\theta}_{p}, \sigma_{p}, \sigma_{d}\big) = 
+\Pr\big(\mathbf{y} \mid \mathbf{z},\boldsymbol{\theta}_{d}, \sigma_{d} \big)\Pr\big(\mathbf{z} \mid \boldsymbol{\theta}_{p}, \sigma_{p}\big)
+\Pr\big(\boldsymbol{\theta}_{d}\big)\Pr\big(\boldsymbol{\theta}_{p}\big) \Pr\big(\sigma_{d}\big) \Pr\big(\sigma_{p}\big)$$
 <div style="width:200px; height=200px; margin:0 auto;">
 <center>
 ![](dag6.png)
@@ -154,9 +156,9 @@ $$\Pr\big(y,z,\theta_d,\theta_p\big) = \Pr\big(y \mid z,\theta_d\big)\Pr\big(z \
 
 #### VI. Diamond's pigeons
 
-The holy grail in Bayesian analysis is to discover the *marginal posterior distribution* from unobserved quantities (parameters, latent states, missing data, forecasts) from quantities we are able to observe (data).  It follows that we must understand what marginal distributions are.  The following is an example of a discrete case that also exercises your newly gained familiarity with the laws of probability.
+The holy grail in Bayesian analysis is to discover the *marginal posterior distribution* of unobserved quantities (parameters, latent states, missing data, forecasts) from quantities we are able to observe (data).  It follows that we must understand what marginal distributions are.  The following is an example of a discrete case that also exercises your newly gained familiarity with the laws of probability.
 
-Jared Diamond studied the distribution of fruit pigeons *Ptilinopus rivoli* and *P. solomensis* on 32 islands in the Bismark archipelago northeast of New Guinea (Table 1). Define the event $R$ as an island being occupied by *P. rivoli*, and the event $S$ as an island being occupied by *. solomensis*. The complimentary events are that an island is not occupied by *P. solomensis* $\big(S^c\big)$ and not occupied by *P. rivoli* $\big(R^c\big)$.
+Jared Diamond studied the distribution of fruit pigeons *Ptilinopus rivoli* and *P. solomonensis* on 32 islands in the Bismark archipelago northeast of New Guinea (Table 1). Define the event $R$ as an island being occupied by *P. rivoli*, and the event $S$ as an island being occupied by *P. solomonensis*. The complimentary events are that an island is not occupied by *P. solomonensis* $\big(S^c\big)$ and not occupied by *P. rivoli* $\big(R^c\big)$.
 
 <br>
 
@@ -165,8 +167,8 @@ Jared Diamond studied the distribution of fruit pigeons *Ptilinopus rivoli* and 
 
 Status  | Number of Islands
 ------------- | -------------
-*P. rivoli* present, *P.solomensis* absent | 9
-*P. solomensis* present, *P. rivoli* absent | 18
+*P. rivoli* present, *P. solomonensis* absent | 9
+*P. solomonensis* present, *P. rivoli* absent | 18
 Both present | 2
 Both absent | 3
 Total | 32
