--- a/Labs/Probability/Probability.Rmd
+++ b/Labs/Probability/Probability.Rmd
@@ -1,12 +1,12 @@
 <style>
 
 /* uncomment out this to generate exercise */
-/* .hider {display: none;}  */
-/* .hider2 {display: inline;} */
+/* .hider {display: none;}  
+/* .hider2 {display: inline;} 
 
 /* uncomment out this to generate key */
- .hider {display: inline;} 
- .hider2 {display: none;} 
+ .hider {display: inline;}  
+ .hider2 {display: none;}  
 
 </style>
 
@@ -145,18 +145,20 @@ The probability of a vector of observations $\mathbf{y}$ depends on a vector of 
 $$\Pr\big(\mathbf{y},\mathbf{z},\boldsymbol{\theta}_{d},\boldsymbol{\theta}_{p}, \sigma_{p}, \sigma_{d}\big) = 
 \Pr\big(\mathbf{y} \mid \mathbf{z},\boldsymbol{\theta}_{d}, \sigma_{d} \big)\Pr\big(\mathbf{z} \mid \boldsymbol{\theta}_{p}, \sigma_{p}\big)
 \Pr\big(\boldsymbol{\theta}_{d}\big)\Pr\big(\boldsymbol{\theta}_{p}\big) \Pr\big(\sigma_{d}\big) \Pr\big(\sigma_{p}\big)$$
-<div style="width:500px; height=500px; margin:0 auto;">
+<div style="width:200px; height=200px; margin:0 auto;">
 <center>
 ![](dag6.png)
 </center>
 </div>
 </div>
 
+<br>
+
 #### VI. Diamond's pigeons
 
 The holy grail in Bayesian analysis is to discover the *marginal posterior distribution* of unobserved quantities (parameters, latent states, missing data, forecasts) from quantities we are able to observe (data).  It follows that we must understand what marginal distributions are.  The following is an example of a discrete case that also exercises your newly gained familiarity with the laws of probability.
 
-Jared Diamond studied the distribution of fruit pigeons *Ptilinopus rivoli* and *P. solomonensis* on 32 islands in the Bismark archipelago northeast of New Guinea (Table 1). Define the event $R$ as an island being occupied by *P. rivoli*, and the event $S$ as an island being occupied by *P. solomonensis*. The complimentary events are that an island is not occupied by *P. solomonensis* $\big(S^c\big)$ and not occupied by *P. rivoli* $\big(R^c\big)$.
+Jared Diamond studied the distribution of fruit pigeons *Ptilinopus rivoli* and *P. solomonensis* on 32 islands in the Bismark archipelago northeast of New Guinea (Table 1). Define the event $R$ as an island being occupied by *P. rivoli*, and the event $S$ as an island being occupied by *P. solomonensis*. The complementary events are that an island is not occupied by *P. solomonensis* $\big(S^c\big)$ and not occupied by *P. rivoli* $\big(R^c\big)$.
 
 <br>
 
