added negative binomial example to lab

--- a/Labs/Probability/Probability.Rmd
+++ b/Labs/Probability/Probability.Rmd
@@ -1,12 +1,12 @@
 <style>
 
 /* uncomment out this to generate exercise */
- .hider {display: none;}  
- .hider2 {display: inline;} 
+/* .hider {display: none;}  
+/* .hider2 {display: inline;} 
 
 /* uncomment out this to generate key */
-/* .hider {display: inline;}  
-/*  .hider2 {display: none;}  
+ .hider {display: inline;}  
+  .hider2 {display: none;}  
 
 </style>
 
@@ -44,10 +44,10 @@ library(knitr)
 knitr::opts_chunk$set(cache = FALSE, warnings = FALSE, tidy = FALSE)
 
 # uncomment out this to generate key
-# nokey = FALSE; key = TRUE
+ nokey = FALSE; key = TRUE
 
 # uncomment out this to generate exercise
- nokey = TRUE; key = FALSE
+# nokey = TRUE; key = FALSE
 ```
 
 <br>
@@ -592,5 +592,67 @@ lines(x, mu, lwd = 2)
 
 <br>
 
+The Poisson distribution is often used for count data, despite the fact that one must assume that the mean and variance are equal. The negative binomial distribution is a more robust alternative, allowing the variance to differ from the mean. There are two parameterizations for the negative binomial.  The first is more frequently used by ecologists: 
 
-    
+$$
+\big[z\mid\lambda,r\big] = 
+\cfrac{\Gamma\big(z + r\big)}{\Gamma\big(r\big)z!}\Big(\cfrac{r}{r+\lambda}\Big)^r
+\Big(\cfrac{\lambda}{r+\lambda}\Big)^z\textrm{,}
+$$
+
+where $z$ is a discrete random variable, $\lambda$ is the mean of the distribution and $r$ is the *dispersion parameter*. The variance of $z$ equals $\lambda + \cfrac{\lambda^{2}}{r}$.
+
+The second parameterization is more often implemented in coding environments (i.e. JAGS):
+
+$$
+\big[z \mid r,\phi \big] = \cfrac{\Gamma\big(z+r\big)}{\Gamma\big(r\big)z!}\phi^r\big(1-\phi\big)^z\textrm{,}
+$$
+
+where $z$ is the discrete random variable representing the number of failures that occur in a sequence of Bernoulli trials before $r$ successes are obtained. The parameter $\phi$ is the probability of success on a given trial. Note that $\phi=\cfrac{r}{\big(\lambda+r\big)}$.
+
+20. Simulate 100,000 observations from a negative binomial distribution with mean of 100 and variance of 400 using the **first** parameterization that has a mean and a dispersion parameter (remember to moment match).
+
+``` {r, eval = TRUE, echo = key, include = key, fig.width = 10, fig.height = 5, fig.align = 'center'}
+## r is dispersion called "size" in R
+n <- 100000
+lambda <- 100
+sigma2 <- 400
+r <- lambda^2/(sigma2 - lambda)
+z1 <- rnbinom(n, mu = lambda, size = r)
+mean(z1)
+var(z1)
+```
+
+21. Do the same simulation using the **second** parameterization. 
+
+``` {r, eval = TRUE, echo = key, include = key, fig.width = 6, fig.height = 5, fig.align = 'center'}
+n <- 100000
+lambda <- 100
+sigma2 <- 400
+r <- lambda^2/(sigma2 - lambda)
+phi <- r/(r + lambda)
+z2 <- rnbinom(n, prob = phi ,size = r)
+mean(z2)
+var(z2)
+```
+
+<div class="hider">
+Alternatively,
+</div>
+
+``` {r, eval = TRUE, echo = key, include = key, fig.width = 6, fig.height = 5, fig.align = 'center'}
+z2 <- rnbinom(n, mu = lambda, size = r)
+mean(z2)
+var(z2)
+```
+
+22. Plot side-by-side histograms of the simulated data.
+
+``` {r, eval = TRUE, echo = key, include = key, fig.width = 8, fig.height = 5, fig.align = 'center'}
+par(mfrow = c(1, 2))
+hist(z1, col = "gray")
+hist(z2, col = "gray")
+```
+
+<br>
+
