--- a/Labs/ConjugatePriors/ConjugatePriors.Rmd
+++ b/Labs/ConjugatePriors/ConjugatePriors.Rmd
@@ -69,7 +69,7 @@ You are conducting a political opinion poll and poll a small number of voters at
 
 <div class="hider">
 \begin{eqnarray}
-\big[\phi \mid y, n\big] & \propto & 
+\big[\phi \mid y \big] & \propto & 
 \textrm{binomial}\big(y\mid\phi,n\big)\,\textrm{beta}\big(\phi\mid \alpha_{prior},\beta_{prior}\big)\\[1em]
 & \propto & \phi^y \big(1-\phi\big)^{n-y}\phi^{\alpha_{prior}-1}\big(1-\phi\big)^{\beta_{prior}-1}\\[1em]
 & \propto & \phi^{\alpha_{prior}+y-1}\big(1-\phi\big)^{\beta_{prior}+n-y-1}\\[1em]
@@ -119,7 +119,7 @@ You are conducting a political opinion poll and have data from 100 voters at ran
 
 <div class="hider">
 \begin{eqnarray}
-\big[\phi \mid y, n\big] & \propto & 
+\big[\phi \mid y \big] & \propto & 
 \prod_{i=1}^{100}\textrm{Bernoulli}\big(z_{i}\mid\phi)\,\textrm{beta}\big(\phi\mid \alpha_{prior},\beta_{prior}\big)\\[1em]
 & \propto & \prod_{i=1}^{100}\phi^{z_{i}}\big(1-\phi\big)^{1-z_{i}}\phi^{\alpha_{prior}-1}\big(1-\phi\big)^{\beta_{prior}-1}\\[1em]
 & \propto & \phi^{\alpha_{prior}-1+\sum_{i=1}^{100}z_{i}}\big(1-\phi\big)^{\beta_{prior}-1+\sum_{i=1}^{100}(1 - z_{i})}\\[1em]
